Update to Airbnb config support

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
-  "presets": [
-    ["env", {
-      "targets": {
-        "browsers": ["last 2 versions", "safari >= 7"]
-      }
-    }]
-  ]
+  "presets": ["react-native", "flow"],
+  "retainLines": true
 }
