--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,20 @@
 {
-  "extends": "standard"
+  "parser": "babel-eslint",
+  "extends": "airbnb",
+  "plugins": ["react", "jsx-a11y", "import"],
+  "parserOptions": {
+    "ecmaVersion": 2017,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "env": {
+    "jest": true,
+    "node": true,
+    "browser": true
+  },
+  "rules": {
+    "semi": 0
+  }
 }
